OpenLab Gradebook: small styling fix for JscrollPane scrollbar

--- a/wp-content/plugins/openlab-gradebook/GradeBook.less
+++ b/wp-content/plugins/openlab-gradebook/GradeBook.less
@@ -626,6 +626,9 @@ span.twitter-typeahead {
 			.jspVerticalBar {
 				display: none;
 			}
+			.jspHorizontalBar {
+				background: transparent;
+			}
 		}
 		.gradebook-student-column-average {
 			display: none !important;
